force-app/main/default/objects/C360_Customer_360_Rollup_Mapping__c/C360_Customer_360_Rollup_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C360: This is the Customer 360 Rollup Mapping Custom Setting.  This setting will be used to define specific field mappings from objects related to C360 to the C360 object.

The custom setting &quot;Customer 360 SObjects&quot; defines the objects that are processed as part of the scheduled batch, whereas the field mappings are stored here in this custom setting.

The &quot;Name&quot; field must be the API name of the C360 object field that the process is mapping to.  Custom fields must have the &quot;__c&quot; suffix.</description>
    <label>Customer 360 Rollup Mapping</label>
</CustomObject>