force-app/main/default/objects/C360_Customer_360_Rollup_Mapping__c/fields/C360_Aggregation_Type__c.field-meta.xml
<CustomField>
    <fullName>C360_Aggregation_Type__c</fullName>
    <description>C360: The way we will be aggregating the data from the fields on the related records onto the specified field on the C360 record.  Current version 1.0 can use the SUM function.</description>
    <inlineHelpText>C360: The way we will be aggregating the data from the fields on the related records onto the specified field on the C360 record.   Current version 1.0 can use the SUM function.</inlineHelpText>
    <label>Aggregation Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>