force-app/main/default/objects/C360_Customer_360_Rollup_Mapping__c/fields/C360_Group_by_field__c.field-meta.xml
<CustomField>
    <fullName>C360_Group_by_field__c</fullName>
    <description>C360: This field specifies the field on related objects that will group records by their related C360 parent.  Once the records are grouped, the data within is aggregated in the function determined by the &quot;Aggregation Type&quot; field in the custom setting.</description>
    <inlineHelpText>C360: This field specifies the field on related objects that will group records by their related C360 parent.  Once the records are grouped, the data within is aggregated in the function determined by the &quot;Aggregation Type&quot; field in the custom setting.</inlineHelpText>
    <label>Group by field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>