force-app/main/default/objects/C360_Customer_360_Rollup_Mapping__c/fields/C360_Map_from_field__c.field-meta.xml
<CustomField>
    <fullName>C360_Map_from_field__c</fullName>
    <description>C360: API name of the field we will be mapping FROM.  This field name must come from an object designated in the &quot;Customer 360 SObjects&quot; custom setting and noted in the &quot;Map from Object&quot; field in this custom setting.

API names of custom fields must have the &quot;__c&quot; suffix.</description>
    <inlineHelpText>C360: API name of the field we will be mapping FROM.  This field name must come from an object designated in the &quot;Customer 360 SObjects&quot; custom setting and noted in the &quot;Map from Object&quot; field in this custom setting.</inlineHelpText>
    <label>Map from field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>