force-app/main/default/objects/C360_Customer_360_Rollup_Mapping__c/fields/C360_Map_from_object__c.field-meta.xml
<CustomField>
    <fullName>C360_Map_from_object__c</fullName>
    <description>C360: API name of the object we will be mapping FROM.  This object name must come from an object designated in the &quot;Customer 360 SObjects&quot; custom setting and noted in the &quot;Map from Object&quot; field in this custom setting.

Custom objects must have the &quot;__c&quot; suffix.</description>
    <inlineHelpText>C360: API name of the object we will be mapping FROM.  This object name must come from an object designated in the &quot;Customer 360 SObjects&quot; custom setting and noted in the &quot;Map from Object&quot; field in this custom setting.

Custom objects must have &quot;__c&quot;.</inlineHelpText>
    <label>Map from object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>